--- a/src/EcoLogic/pages/adm/index.html
+++ b/src/EcoLogic/pages/adm/index.html
@@ -28,7 +28,7 @@
 
         </nav>
     </header>
-
+    <div class="main-container">
     <aside>
         <div class="search-bar">
             <input type="text">
@@ -59,13 +59,14 @@
             <button type="button">Sair</button>
         </div>
     </aside>
-    
+   
     <main>
         <article>
-
+            <h1>Administrador</h1>
+            <h2>EcoLogic Management Software </h2>
         </article>
     </main>
-
+</div>
     <section> 
         
     </section>
