--- a/src/EcoLogic/pages/adm/index.html
+++ b/src/EcoLogic/pages/adm/index.html
@@ -67,21 +67,62 @@
             <h2>EcoLogic Management Software</h2>
 
             <article class="content-article">
-                
+
                 <h3>Número Total de Usinas Cadastradas:</h3>
-                <p id="total-usinas">16</p> 
+                <p id="total-usinas">16</p>
 
                 <h3>Número Total de Fontes de Energia:</h3>
-                <p id="total-fontes">78</p> 
-
+                <p id="total-fontes">78</p>
 
             </article>
+
+            <section class="form-section">
+                <h2>+ Cadastro de Usuário e Empresa</h2>
+                <form class="registration-form" action="#" method="post">
+                    <div class="form-group">
+                        <input type="text" id="name" name="name" placeholder="Nome Completo*" required>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="email" id="email" name="email" placeholder="E-mail*" required>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" id="usina-name" name="usina-name" placeholder="Nome Usina*" required>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" id="energy-source" name="energy-source" placeholder="Fonte de Energia*"
+                            required>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" id="location" name="location" placeholder="Localização*" required>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" id="region" name="region" placeholder="Estado/Região*" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Data Início: </label>
+                        <input type="date" id="start-date" name="start-date" placeholder="Data Início*">
+                    </div>
+
+                    <div class="form-group">
+                        <textarea id="description" name="description" placeholder="Descrição..." rows="4"></textarea>
+                    </div>
+
+                    <button type="submit" class="submit-btn">Cadastrar</button>
+                </form>
+            </section>
+
         </main>
     </div>
 
-    <section>
 
-    </section>
+
+
 
     <footer>
         <div class="footer-content">
