--- a/src/EcoLogic/pages/adm/index.html
+++ b/src/EcoLogic/pages/adm/index.html
@@ -105,15 +105,16 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Data Início: </label>
                         <input type="date" id="start-date" name="start-date" placeholder="Data Início*">
                     </div>
-
+<div>
                     <div class="form-group">
                         <textarea id="description" name="description" placeholder="Descrição..." rows="4"></textarea>
                     </div>
-
-                    <button type="submit" class="submit-btn">Cadastrar</button>
+                    <div class="botaoenviar">
+                        <button type="submit" class="submit-btn">Cadastrar</button>
+                    </div>
+                    </div>
                 </form>
             </section>
 
