--- a/projeto-concreta/WebSites/src/index.html
+++ b/projeto-concreta/WebSites/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha384-LX7vskBGIYwFfF36mj8JX8z1x88CfqD74syZZf3Xav+jzCFR/dNWm3Ap+q+6hw5H" crossorigin="anonymous">
 </head>
 <body>
   <app-root></app-root>
